--- a/LDVELH/src/main/res/layout-land/activity_adventure.xml
+++ b/LDVELH/src/main/res/layout-land/activity_adventure.xml
@@ -1,12 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/lib/android.support.v7.app"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/paper_background"
     android:orientation="vertical"
-    android:padding="@dimen/default_activity_margin" >
+    android:padding="@dimen/default_activity_margin">
 
     <TextView
         android:id="@+id/bookTitle"
@@ -19,12 +20,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <com.home.ldvelh.ui.widget.DFAttributeSkill
                 android:layout_width="match_parent"
@@ -46,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -54,7 +55,7 @@
                 android:baselineAligned="false"
                 android:clipChildren="false"
                 android:clipToPadding="false"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -65,31 +66,25 @@
                     android:clipChildren="false"
                     android:clipToPadding="false"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/ldvelhTitles"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/gold"
+                        tools:ignore="NestedWeights" />
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="center"
-                        tools:ignore="NestedWeights" >
-
-                        <TextView
-                            style="@style/ldvelhTitles"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="@dimen/default_padding"
-                            android:text="@string/gold" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
                         android:clipChildren="false"
                         android:clipToPadding="false"
                         android:gravity="center"
-                        tools:ignore="NestedWeights" >
+                        tools:ignore="NestedWeights">
 
                         <com.home.ldvelh.ui.widget.CustomNumberPicker
                             android:id="@+id/numberPickerGold"
@@ -97,7 +92,6 @@
                             android:layout_height="wrap_content"
                             android:clipChildren="false"
                             custom:allowLongPress="true"
-                            custom:scaleFactor="1.2"
                             custom:vertical="false" />
                     </LinearLayout>
                 </LinearLayout>
@@ -109,7 +103,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/pencil_border_small"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
                 </LinearLayout>
             </LinearLayout>
 
@@ -122,7 +116,7 @@
             <android.support.v4.view.ViewPager
                 android:id="@+id/pages"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
             </android.support.v4.view.ViewPager>
         </LinearLayout>
     </LinearLayout>
