--- a/LDVELH/src/main/res/layout/activity_adventure.xml
+++ b/LDVELH/src/main/res/layout/activity_adventure.xml
@@ -1,12 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/lib/android.support.v7.app"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/paper_background"
     android:orientation="vertical"
-    android:padding="@dimen/default_activity_margin" >
+    android:padding="@dimen/default_activity_margin">
 
     <TextView
         android:id="@+id/bookTitle"
@@ -19,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <com.home.ldvelh.ui.widget.DFAttributeSkill
             android:layout_width="0dp"
@@ -43,33 +44,27 @@
         android:baselineAligned="false"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:background="@drawable/pencil_border_small"
             android:baselineAligned="false"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:gravity="center_vertical"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
-            <LinearLayout
+            <TextView
+                style="@style/ldvelhTitles"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                tools:ignore="NestedWeights" >
-
-                <TextView
-                    style="@style/ldvelhTitles"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/default_padding"
-                    android:text="@string/gold" />
-            </LinearLayout>
+                android:text="@string/gold"
+                tools:ignore="NestedWeights" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -77,7 +72,7 @@
                 android:layout_weight="2"
                 android:clipChildren="false"
                 android:clipToPadding="false"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <com.home.ldvelh.ui.widget.CustomNumberPicker
                     android:id="@+id/numberPickerGold"
@@ -85,7 +80,6 @@
                     android:layout_height="wrap_content"
                     android:clipChildren="false"
                     custom:allowLongPress="true"
-                    custom:scaleFactor="1.2"
                     custom:vertical="false" />
             </LinearLayout>
         </LinearLayout>
@@ -94,11 +88,11 @@
             android:id="@+id/freeArea"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="2"
             android:background="@drawable/pencil_border_small"
             android:clipChildren="false"
             android:gravity="center_vertical"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
         </LinearLayout>
     </LinearLayout>
 
@@ -111,7 +105,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pages"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
