--- a/LDVELH/src/main/res/layout/activity_adventure_cc.xml
+++ b/LDVELH/src/main/res/layout/activity_adventure_cc.xml
@@ -106,7 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/default_margin"
-                android:text="@string/cc_tutelary_god" />
+                android:text="@string/cc_protector_god" />
 
             <TextView
                 android:id="@+id/tutelaryGod"
