--- a/LDVELH/src/main/res/layout/list_item_combat_row.xml
+++ b/LDVELH/src/main/res/layout/list_item_combat_row.xml
@@ -1,11 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:baselineAligned="false"
     android:clipChildren="false"
     android:clipToPadding="false"
     android:gravity="center_vertical"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    tools:ignore="UnusedResources">
 
     <LinearLayout
         android:id="@+id/goodguysView"
