--- a/LDVELH/src/main/res/layout/list_item_note.xml
+++ b/LDVELH/src/main/res/layout/list_item_note.xml
@@ -1,7 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    tools:ignore="UnusedResources">
 
     <TextView
         android:id="@+id/itemName"
