--- a/LDVELH/src/main/res/layout/list_item_combat_fighter.xml
+++ b/LDVELH/src/main/res/layout/list_item_combat_fighter.xml
@@ -7,7 +7,7 @@
     android:clipChildren="false"
     android:clipToPadding="false"
     android:gravity="center_vertical"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/fighterName"
@@ -24,9 +24,10 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingEnd="@dimen/default_padding"
-        android:paddingStart="@dimen/default_padding" >
+        android:paddingStart="@dimen/default_padding">
 
         <TextView
+            android:id="@+id/skillLabel"
             style="@style/ldvelhVerySmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,9 +49,10 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingEnd="@dimen/default_padding"
-        android:paddingStart="@dimen/default_padding" >
+        android:paddingStart="@dimen/default_padding">
 
         <TextView
+            android:id="@+id/staminaLabel"
             style="@style/ldvelhVerySmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
