--- a/LDVELH/src/main/res/layout/list_item_combat_row.xml
+++ b/LDVELH/src/main/res/layout/list_item_combat_row.xml
@@ -10,28 +10,25 @@
     tools:ignore="UnusedResources">
 
     <LinearLayout
-        android:id="@+id/goodguysView"
+        android:id="@+id/teamLeftView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/small_margin"
         android:layout_weight="1"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:orientation="vertical" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@drawable/divider_brown_opaque" />
-
-    <LinearLayout
-        android:id="@+id/monstersView"
+        android:id="@+id/teamRightView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/small_margin"
         android:layout_weight="1"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:orientation="vertical" />
 
 </LinearLayout>
