--- a/LDVELH/src/main/res/layout/widget_list_custom_list.xml
+++ b/LDVELH/src/main/res/layout/widget_list_custom_list.xml
@@ -1,23 +1,23 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <ListView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:divider="@drawable/divider_brown_opaque"
-            android:padding="@dimen/default_padding" >
+            android:divider="@null"
+            android:padding="@dimen/default_padding">
         </ListView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/newItem"
@@ -47,7 +47,7 @@
             android:layout_margin="@dimen/default_margin"
             android:background="@drawable/small_button_selector"
             android:padding="@dimen/default_padding"
-            android:text="@string/add" >
+            android:text="@string/add">
         </Button>
     </LinearLayout>
 
