--- a/LDVELH/src/main/res/layout/activity_adventure_cc.xml
+++ b/LDVELH/src/main/res/layout/activity_adventure_cc.xml
@@ -1,11 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/lib/android.support.v7.app"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/paper_background"
     android:orientation="vertical"
-    android:padding="@dimen/default_activity_margin" >
+    android:padding="@dimen/default_activity_margin">
 
     <TextView
         android:id="@+id/bookTitle"
@@ -18,14 +19,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/pencil_border_small"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <com.home.ldvelh.ui.widget.CCAttribute
                 android:layout_width="match_parent"
@@ -47,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/pencil_border_small"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <com.home.ldvelh.ui.widget.CCAttribute
                 android:layout_width="match_parent"
@@ -67,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/pencil_border_small"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <com.home.ldvelh.ui.widget.CCAttribute
                 android:layout_width="match_parent"
@@ -86,20 +87,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <com.home.ldvelh.ui.widget.CCWounds
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2" />
+        android:orientation="horizontal"
+        tools:ignore="DisableBaselineAlignment">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@drawable/pencil_border"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/ldvelhSmallTitles"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/cc_wounds" />
+
+            <com.home.ldvelh.ui.widget.CCWounds
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/pencil_border_small"
             android:gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 style="@style/ldvelhSmallTitles"
@@ -125,7 +141,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pages"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
